# DLockers

./: CMakeLists.txt  README.md
.github/: release.yml
.github/workflows/: build-test-install.yml  build-wasm.yaml
Bookings/: CMakeLists.txt  tags
Bookings/.github/workflows/: build-test-install.yml
Bookings/include/: Booking.hpp  DayModel.hpp  HourModel.hpp
Bookings/qml/: DayDelegate.qml  DaySwipeView.qml  HourDelegate.qml  HourListView.qml
Bookings/src/: Booking.cpp  DayModel.cpp  HourModel.cpp
Client/: CMakeLists.txt  README.md  main.cpp  tags
Client/ServerMap/: CMakeLists.txt  tags
Client/ServerMap/include/: wasmmap.hpp
Client/ServerMap/qml/: ObjDelegate.qml  ObjPopUp.qml  ObjectMapView.qml
Client/ServerMap/src/: wasmmap.cpp
Client/include/: client.hpp
Client/qml/: AccountMenu.qml  OpenBox.qml  ServerDetailed.qml  window.qml
Client/src/: client.cpp
Client/wasm/: client_main.js
Server/: CMakeLists.txt  README.md  main.cpp  tags
Server/include/: server.hpp
Server/qml/: ConfDrawer.qml  OpenBox.qml  window.qml
Server/src/: server.cpp
wasm/: README.md
wasm/Client/: index.html  style.css
wasm/Client/js/: scripts.js
wasm/MockupServer/: README.md  index.html  style.css
